# module-zmq

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  qore-zmq-module.spec
cmake/: FindCZMQ.cmake  FindZMQ.cmake  find-czmq.cmake  find-zmq.cmake
docs/: mainpage.dox.tmpl
src/: QC_DealerZSocket.h  QC_DealerZSocket.qpp  QC_PairZSocket.h  QC_PairZSocket.qpp  QC_PubZSocket.h  QC_PubZSocket.qpp  QC_PullZSocket.h  QC_PullZSocket.qpp  QC_PushZSocket.h  QC_PushZSocket.qpp  QC_RepZSocket.h  QC_RepZSocket.qpp  QC_ReqZSocket.h  QC_ReqZSocket.qpp  QC_RouterZSocket.h  QC_RouterZSocket.qpp  QC_SimpleZMsg.h  QC_SimpleZMsg.qpp  QC_StreamZSocket.h  QC_StreamZSocket.qpp  QC_SubZSocket.h  QC_SubZSocket.qpp  QC_XPubZSocket.h  QC_XPubZSocket.qpp  QC_XSubZSocket.h  QC_XSubZSocket.qpp  QC_ZContext.h  QC_ZContext.qpp  QC_ZFrame.h  QC_ZFrame.qpp  QC_ZMsg.h  QC_ZMsg.qpp  QC_ZSocket.h  QC_ZSocket.qpp  QC_ZSocketDealer.h  QC_ZSocketDealer.qpp  QC_ZSocketDish.h  QC_ZSocketDish.qpp  QC_ZSocketPair.h  QC_ZSocketPair.qpp  (+27 more)
test/: zmq.qtest
test/docker_test/: test-alpine.sh  test-ubuntu.sh  test.sh
